# sbc-snapshot

./: .gitignore  ARCHITECTURE.md  Cargo.toml  EXTENDING.md  LICENSE  LICENSE-MIT  QUICKSTART.md  README.md
.cargo/: config.toml
examples/: orangepi5-max-full.json  orangepi5-max-snapshot.json
sbc-cli/: Cargo.toml
sbc-cli/src/: formatter.rs  main.rs
sbc-core/: Cargo.toml
sbc-core/src/: lib.rs
sbc-core/src/modules/: accounts.rs  filesystem.rs  firewall.rs  mod.rs  network.rs  packages.rs  services.rs  ssh.rs  sudoers.rs  system_info.rs
sbc-core/src/types/: finding.rs  mod.rs  report.rs  severity.rs
