[workspace]
members = [
    "sbc-core",
    "sbc-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SBC Snapshot Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sbc-snapshot"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System interaction
nix = { version = "0.29", features = ["user", "process", "hostname"] }

# Regex and parsing
regex = "1.10"
lazy_static = "1.4"
