[workspace]
members = [
    "sbc-core",
    "sbc-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alex Jokela <alex@camulus.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/ajokela/sbc-snapshot"
homepage = "https://github.com/ajokela/sbc-snapshot"
documentation = "https://github.com/ajokela/sbc-snapshot#readme"
keywords = ["security", "sbc", "raspberry-pi", "audit", "scanner"]
categories = ["command-line-utilities", "development-tools"]
description = "Security and configuration assessment tool for Single Board Computers"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System interaction
nix = { version = "0.29", features = ["user", "process", "hostname"] }

# Regex and parsing
regex = "1.10"
lazy_static = "1.4"
