[package]
name = "sbc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[[bin]]
name = "sbc-snapshot"
path = "src/main.rs"

[dependencies]
sbc-core = { version = "0.1.0", path = "../sbc-core" }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
nix.workspace = true
